Fix gh workflow missing git adds

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,4 +50,4 @@ jobs:
         author_name: github-actions
         author_email: github-actions@github.com
         message: \[BOT\] Update static files
-        add: "**/**"
+        add: "*.html"
